--- a/.github/workflows/mrbgem.yml
+++ b/.github/workflows/mrbgem.yml
@@ -7,15 +7,32 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  build-2.1.2: &build
     runs-on: ubuntu-latest
-
+    env:
+      MRUBY_VERSION: 2.1.2 
     steps:
     - uses: actions/checkout@v2
     - name: install package
       run: sudo apt install libonig-dev
     - name: download mruby
-      run: git clone --depth 1 -b "2.0.1" "https://github.com/mruby/mruby.git" mruby
+      run: git clone --depth 1 -b $MRUBY_VERSION "https://github.com/mruby/mruby.git" mruby
     - name: run test
       run: cd mruby && MRUBY_CONFIG="../.github/workflows/config.rb" ./minirake all test
+  
+  build-2.1.0:
+    <<: *build
+    env:
+      MRUBY_VERSION: 2.1.0
+  build-2.0.0:
+    <<: *build
+    env:
+      MRUBY_VERSION: 2.0.0
+  build-1.4.1:
+    <<: *build
+    env:
+      MRUBY_VERSION: 1.4.1
+  build-1.2.0:
+    <<: *build
+    env:
+      MRUBY_VERSION: 1.2.0
