--- a/.github/workflows/mrbgem.yml
+++ b/.github/workflows/mrbgem.yml
@@ -7,32 +7,25 @@ on:
     branches: [ master ]
 
 jobs:
-  build-2.1.2: &build
-    runs-on: ubuntu-latest
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-18.04, ubuntu-20.04, macos-latest]
+        mruby_version: [2.1.2, 2.1.0, 2.0.0, 1.4.1, 1.2.0]
+    runs-on: ${{ matrix.os }}
+    name: ${{ matrix.os }} & ${{ matrix.compiler.CC }} & mruby-${{ matrix.mruby_version }}
     env:
-      MRUBY_VERSION: 2.1.2 
+      MRUBY_VERSION: ${{ matrix.mruby_version }}
     steps:
     - uses: actions/checkout@v2
     - name: install package
+      if: startsWith(matrix.os, 'ubuntu')
       run: sudo apt install libonig-dev
+    - name: install package
+      if: startsWith(matrix.os, 'macos')
+      run: brew libonig
     - name: download mruby
       run: git clone --depth 1 -b $MRUBY_VERSION "https://github.com/mruby/mruby.git" mruby
     - name: run test
       run: cd mruby && MRUBY_CONFIG="../.github/workflows/config.rb" ./minirake all test
-  
-  build-2.1.0:
-    <<: *build
-    env:
-      MRUBY_VERSION: 2.1.0
-  build-2.0.0:
-    <<: *build
-    env:
-      MRUBY_VERSION: 2.0.0
-  build-1.4.1:
-    <<: *build
-    env:
-      MRUBY_VERSION: 1.4.1
-  build-1.2.0:
-    <<: *build
-    env:
-      MRUBY_VERSION: 1.2.0
