--- a/.github/workflows/mrbgem.yml
+++ b/.github/workflows/mrbgem.yml
@@ -24,7 +24,7 @@ jobs:
       run: sudo apt install libonig-dev
     - name: install package
       if: startsWith(matrix.os, 'macos')
-      run: brew libonig
+      run: brew install oniguruma
     - name: download mruby
       run: git clone --depth 1 -b $MRUBY_VERSION "https://github.com/mruby/mruby.git" mruby
     - name: run test
