--- a/.github/workflows/mrbgem.yml
+++ b/.github/workflows/mrbgem.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04, macos-latest]
+        os: [ubuntu-18.04, macos-latest]
         mruby_version: [2.1.2, 2.1.0, 2.0.0, 1.4.1, 1.2.0]
     runs-on: ${{ matrix.os }}
     name: ${{ matrix.os }} & ${{ matrix.compiler.CC }} & mruby-${{ matrix.mruby_version }}
