--- a/.github/workflows/mrbgem.yml
+++ b/.github/workflows/mrbgem.yml
@@ -1,6 +1,8 @@
 name: mrbgem test
 
 on:
+  schedule:
+    - cron: 0 0 * * *
   push:
     branches: [ master ]
   pull_request:
@@ -12,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-18.04, macos-latest]
-        mruby_version: [2.1.2, 2.1.0, 2.0.0, 1.4.1, 1.2.0]
+        mruby_version: [master, 2.1.2, 2.1.0, 2.0.0, 1.4.1, 1.2.0]
     runs-on: ${{ matrix.os }}
     name: ${{ matrix.os }} & ${{ matrix.compiler.CC }} & mruby-${{ matrix.mruby_version }}
     env:
