--- a/.github/workflows/mrbgem.yml
+++ b/.github/workflows/mrbgem.yml
@@ -16,7 +16,7 @@ jobs:
         os: [ubuntu-18.04, macos-latest]
         mruby_version: [master, 2.1.2, 2.1.0, 2.0.0, 1.4.1, 1.2.0]
     runs-on: ${{ matrix.os }}
-    name: ${{ matrix.os }} & ${{ matrix.compiler.CC }} & mruby-${{ matrix.mruby_version }}
+    name: ${{ matrix.os }} & mruby-${{ matrix.mruby_version }}
     env:
       MRUBY_VERSION: ${{ matrix.mruby_version }}
     steps:
